[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Font/yoster.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Music/Zelda- Great Fairy Fountain (Piano Etude) (online-audio-converter.com).wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -124.0
margin_right = 403.0
custom_constants/separation = 11

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_right = 403.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../Quit")
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="New Game" type="Button" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 403.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 403.0
margin_bottom = 91.0
focus_neighbour_bottom = NodePath("../Continue")
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.063
autoplay = true
attenuation = 2.0

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
